--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,3 +1,3 @@
-body, body * {
+body, body *:not(.jsoneditor-code, .cm-editor, .monaco-editor, pre, code, textarea) {
     font-family: 'CustomFont', sans-serif !important;
 }
